--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
     "leaflet.markercluster": "^1.5.3",
+    "leaflet.markercluster.layersupport": "^2.0.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
@@ -42,6 +43,7 @@
     "@types/jasmine": "~5.1.8",
     "@types/leaflet": "^1.9.20",
     "@types/leaflet.markercluster": "^1.5.5",
+    "@types/leaflet.markercluster.layersupport": "^1.0.5",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
