--- a/angular.json
+++ b/angular.json
@@ -42,12 +42,14 @@
               "node_modules/leaflet-extra-markers/dist/css/leaflet.extra-markers.min.css",
               "node_modules/leaflet.markercluster/dist/MarkerCluster.css",
               "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
+              "node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js",
-              "node_modules/leaflet-extra-markers/dist/js/leaflet.extra-markers.min.js"
+              "node_modules/leaflet-extra-markers/dist/js/leaflet.extra-markers.min.js",
+              "node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"
             ]
           },
           "configurations": {
