--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "leaflet-extra-markers": "^1.2.2",
+    "leaflet-sidebar-v2": "^3.2.3",
     "leaflet.markercluster": "^1.5.3",
     "leaflet.markercluster.layersupport": "^2.0.1",
     "rxjs": "~7.8.2",
