Disabled HRM for lazy loading. Enabled lazy loading wherever lists of objects are shown.

--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,8 @@
               "buildTarget": "Tools_Web:build:production"
             },
             "development": {
-              "buildTarget": "Tools_Web:build:development"
+              "buildTarget": "Tools_Web:build:development",
+              "hmr": false
             }
           },
           "defaultConfiguration": "development"
