--- a/package.json
+++ b/package.json
@@ -10,22 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.6",
-    "@angular/cdk": "^20.1.5",
-    "@angular/common": "^20.1.6",
-    "@angular/compiler": "^20.1.6",
-    "@angular/core": "^20.1.6",
-    "@angular/forms": "^20.1.6",
-    "@angular/material": "^20.1.5",
-    "@angular/platform-browser": "^20.1.6",
-    "@angular/platform-browser-dynamic": "^20.1.6",
-    "@angular/router": "^20.1.6",
+    "@angular/animations": "^20.3.0",
+    "@angular/cdk": "^20.2.3",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.0",
+    "@angular/material": "^20.2.3",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/platform-browser-dynamic": "^20.3.0",
+    "@angular/router": "^20.3.0",
     "@bluehalo/ngx-leaflet": "^20.0.0",
     "@bluehalo/ngx-leaflet-markercluster": "^20.0.3",
+    "@digitalascetic/ngx-pica": "^20.1.3",
     "@fortawesome/angular-fontawesome": "^3.0.0",
-    "@fortawesome/fontawesome-free": "^7.0.0",
-    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@popperjs/core": "^2.11.8",
+    "browser-image-compression": "^2.0.2",
+    "exifr": "^7.1.3",
     "font-awesome": "^4.7.0",
     "gramli-angular-notifier": "^17.0.0",
     "leaflet": "^1.9.4",
@@ -33,25 +36,26 @@
     "leaflet-sidebar-v2": "^3.2.3",
     "leaflet.markercluster": "^1.5.3",
     "leaflet.markercluster.layersupport": "^2.0.1",
+    "pica": "^9.0.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.1.5",
-    "@angular/cli": "^20.1.5",
-    "@angular/compiler-cli": "^20.1.6",
-    "@angular/localize": "^20.1.6",
-    "@types/jasmine": "~5.1.8",
+    "@angular-devkit/build-angular": "^20.3.2",
+    "@angular/cli": "^20.3.2",
+    "@angular/compiler-cli": "^20.3.0",
+    "@angular/localize": "^20.3.0",
+    "@types/jasmine": "~5.1.9",
     "@types/leaflet": "^1.9.20",
-    "@types/leaflet.markercluster": "^1.5.5",
-    "@types/leaflet.markercluster.layersupport": "^1.0.5",
-    "jasmine-core": "~5.9.0",
+    "@types/leaflet.markercluster": "^1.5.6",
+    "@types/leaflet.markercluster.layersupport": "^1.0.6",
+    "jasmine-core": "~5.10.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "5.8.3"
+    "typescript": "5.9.2"
   }
 }
